# tclx

./: .gitignore  .travis.yml  CHANGES  ChangeLog  MANIFEST  Makefile.in  README  README.SHLIBS  README.md  TO-DO  configure  configure.in  license.terms  tcl.patch
.github/workflows/: linux-ci.yml  mac-ci.yml
TCL-REQUIRED-PATCHES/: cmdtrace.patch  compile_80b1.patch  format.patch  namesp_80b1.patch  proc_80b1.patch  result.patch  unixnotfy_80b1.patch
doc/: CONVERSION-NOTES  CmdWrite.3  Handles.3  Keylist.3  Makefile.in  Memory.n  ObjCmdWrite.3  TclX.n  TclXInit.3
generic/: tclExtdInt.h  tclExtend.h  tclXbsearch.c  tclXchmod.c  tclXcmdloop.c  tclXcoalesce.c  tclXdebug.c  tclXdup.c  tclXexists.c  tclXfcntl.c  tclXfilecmds.c  tclXfilescan.c  tclXflock.c  tclXfstat.c  tclXgeneral.c  tclXhandles.c  tclXinit.c  tclXkeylist.c  tclXlgets.c  tclXlib.c  tclXlist.c  tclXmath.c  tclXmsgcat.c  tclXoscmds.c  tclXprocess.c  tclXprofile.c  tclXselect.c  tclXsignal.c  tclXsocket.c  tclXstring.c  tclXtest.c  tclXutil.c
tcl/compat/: Makefile.in  getopt.c  random.c  rename.c  strftime.c
tcl/generic/: hello.tcl  tcl++.C  tcl++.h  tclExtdInt.h  tclExtend.h  tclXAppInit.c  tclXbsearch.c  tclXchmod.c  tclXclock.c  tclXcmdInit.c  tclXcmdloop.c  tclXcnvclock.c  tclXdebug.c  tclXdup.c  tclXfcntl.c  tclXfilecmds.c  tclXfilescan.c  tclXflock.c  tclXfstat.c  tclXgeneral.c  tclXgetdate.y  tclXhandles.c  tclXinit.c  tclXinitDSA.c  tclXinitSA.c  tclXkeylist.c  tclXlgets.c  tclXlib.c  tclXlibInit.c  tclXlist.c  tclXmath.c  tclXmsgcat.c  tclXoscmds.c  tclXpatchl.h  tclXprocess.c  tclXprofile.c  tclXregexp.c  tclXselect.c  tclXshell.c  tclXsignal.c  (+4 more)
tcl/runtime/: Makefile.in  arrayprocs.tcl  autoload.tcl  buildhelp.tcl  buildidx.tcl  compat.tcl  convlib.tcl  edprocs.tcl  events.tcl  fmath.tcl  forfile.tcl  globrecur.tcl  help.tcl  loadouster.tcl  parray.tcl  profrep.tcl  pushd.tcl  setfuncs.tcl  showproc.tcl  stringfile.tcl  tcllib.tcl  tclshell.tcl  tclx.tcl
tcl/tests/: .gdbinit  Makefile.in  all  arrayproc.test  bsearch.test  chartype.test  chmod.test  chroot.test  clock.test  cmdloop.test  cmdtrace.test  compat.test  convlib.test  copyfile.test  dup.test  fcntl.test  filecmds.test  filescan.test  flock.test  fmath.test  forfile.test  frename.test  fstat.test  ftrunc.test  globrecur.test  help.test  id.test  init.test  keylist.test  lassign.test  lgets.test  list.test  lmatch.test  loop.test  math.test  msgcat.test  nice.test  pipe.test  process.test  profile.test  (+16 more)
tcl/tests/compat/: clock.test  copyfile.test  file.test  server.test
tcl/unix/: Makefile.in  pkgIndex.proto.in  pkgIndex.tcl.in  tclXAppInit.c  tclXconf.h.in  tclXid.c  tclXunixCmds.c  tclXunixDup.c  tclXunixId.c  tclXunixOS.c  tclXunixPort.h  tclXunixSock.c  tclXunixTest.c  tclxConfig.sh.in  tclxlibs.mk.in
tcl/win/: Makefile.in  cattcl.c  configure.in  makefile.vc  tcl.rc  tclXAppInit.c  tclXwinCmds.c  tclXwinDup.c  tclXwinId.c  tclXwinOS.c  tclXwinPort.h  tclXwinTest.c  tclx.rc
tclconfig/: ChangeLog  tcl.m4
tests/: all.tcl  arrayproc.test  chmod.test  chroot.test  cmdtrace.test  coalesce.test  convlib.test  dup.test  fcntl.test  filescan.test  flock.test  fmath.test  fstat.test  ftrunc.test  help.test  keylist.test  lgets.test  msgcat.test  nice.test  pipe.test  process.test  profile.test  signal.test  string.test  stringfil.test  tcllib.test  testlib.tcl  tryeval.test  unixcmds.test
tk/generic/: hello.tcl  tkXinit.c  tkXinitDSA.c  tkXinitSA.c  tkXshell.c  tkXshell.c.diff  tkXtest.c
tk/runtime/: Makefile.in  tclhelp.tcl  tk.tcl.sed  tkdemo.tcl  tkx.tcl
tk/tests/: Makefile.in  signal.test
tk/unix/: Makefile.in  pkgIndex.tcl.in  tkXAppInit.c  tkXunixTest.c  tkxConfig.sh.in  tkxlibs.mk.in
tk/win/: makefile.vc  tkXAppInit.c  tkXwinTest.c  tkXwinUtil.c  tkx.rc  wishx.rc
unix/: Common.mk.in  Config.mk  INSTALL  INSTALL.generic  Makefile.in  acconfig.h  aclocal.m4  configure  configure.in  runtcl.in  runtcl.static.in  tclXAppInit.c  tclXchannelfd.c  tclXunixCmds.c  tclXunixDup.c  tclXunixId.c  tclXunixOS.c  tclXunixPort.h  tclXunixSock.c  tclXunixTest.c
unix/tools/: Makefile.in  bldmanhelp.tcl  buildutil.tcl  checkup.tcl  cphelpdir.sh  cpmanpages.tcl  genindex.tcl  getversion.c  instcopy.tcl  libconvert.tcl  symlinkext.sh  tclmanpages  tkmanpages
win/: INSTALL  INSTALL.txt  Makefile.in  aclocal.m4  common.bc  common.vc  configure.in  makefile.bc  makefile.vc  tclWinSock.c.diff  tclXwinCmds.c  tclXwinId.c  tclXwinOS.c  tclXwinPort.h
